# communicate_2025_aatest

./: .gitignore  .gitmodules  CMakeLists.txt  FEATURES.md  README.md  package.xml  run.bash
include/: aa_test.hpp
launch/: launch.py
src/: aa_test.cpp  communicate_2025_aatest_node.cpp
src/communicate_2025_aatest/: CMakeLists.txt  package.xml
src/communicate_2025_aatest/config/: config.yaml
src/communicate_2025_aatest/include/: aa_test.hpp
src/communicate_2025_aatest/launch/: debug_launch.py
src/communicate_2025_aatest/src/: aa_test.cpp  communicate_2025_aatest_node.cpp
